Fix overflow app body

--- a/React/src/App.css
+++ b/React/src/App.css
@@ -10,6 +10,7 @@
     background-color: #ededed;
     margin-top: -50px;
     height: 90vh;
-    /* width: 90vw; */
+    width: 90vw;
+    min-width: 1000px;
     box-shadow: -1px 4px 20px -6px rgba(0,0,0,0.7);
 }
